--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 01 11:03:17 KST 2019
-sdk.dir=C\:\\Users\\NJB\\AppData\\Local\\Android\\Sdk
+#Tue Oct 01 15:22:08 GMT+09:00 2019
+ndk.dir=C\:\\Users\\ParkJongHoon\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\ParkJongHoon\\AppData\\Local\\Android\\Sdk
